[tool.poetry]
name = "super-map"
version = "0.1.0"
description = ""
authors = ["Rishant Sharma <132047640+SageRish@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.0"
numpy = "^1.26.4"
osmnx = "^1.9.3"
matplotlib = "^3.8.4"
geopandas = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
